Solved the issue of the top navbar tearing on smaller screen sizes. The issue was recognized as follows: The navbar would tear between 1200px and 768px width. A simple media query telling to use display: flex solved the problem.

--- a/main.css
+++ b/main.css
@@ -287,3 +287,13 @@ body {
 .comment-likes, .comment-time {
   color: #90949c;
 }
+
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  #large-navbar {
+    display: flex !important;
+  }
+
+  #search-box {
+    max-width: 300px;
+  }
+}
